Trilingual Democracy: 3/3 solved